force-app/main/default/objects/eComm_Line_Item__dll/eComm_Line_Item__dll.object-meta.xml
<CustomObject>
    <label>eComm Line Item</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>