force-app/main/default/objects/eComm_Line_Item__dll/fields/Order_Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Key__c</fullName>
    <label>Order Line Key</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Order_Line_Key</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>