force-app/main/default/objects/eComm_Line_Item__dll/fields/related_activity__c.field-meta.xml
<CustomField>
    <fullName>related_activity__c</fullName>
    <label>Related Activity</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>related_activity</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>