force-app/main/default/objects/eComm_Line_Item__dll/fields/unit_price__c.field-meta.xml
<CustomField>
    <fullName>unit_price__c</fullName>
    <label>Unit Price</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>unit_price</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>